--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,58 +1,37 @@
-name: Run Puppeteer Bot
-
-on:
-  schedule:
-    - cron: '0 * * * *'
-  workflow_dispatch:
-
-jobs:
-  crawl:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install system dependencies for Puppeteer
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libx11-dev \
-            libx11-xcb1 \
-            libxcb1 \
-            libxcomposite1 \
-            libxcursor1 \
-            libxdamage1 \
-            libxi6 \
-            libxtst6 \
-            libnss3 \
-            libxrandr2 \
-            libasound2 \
-            libatk1.0-0 \
-            libatk-bridge2.0-0 \
-            libcups2 \
-            libdrm2 \
-            libgbm1 \
-            libgtk-3-0 \
-            libxss1 \
-            xdg-utils \
-            fonts-liberation \
-            libappindicator3-1 \
-            libu2f-udev \
-            libvulkan1 \
-            libwayland-client0 \
-            libwayland-cursor0 \
-            libwayland-egl1 \
-            libxshmfence1 \
-            libdbus-1-3
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run bot
-        run: node index.js
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+- name: Install dependencies for Puppeteer
+  run: |
+    sudo apt-get update
+    sudo apt-get install -y \
+      ca-certificates \
+      fonts-liberation \
+      libatk-bridge2.0-0 \
+      libatk1.0-0 \
+      libcups2 \
+      libdbus-1-3 \
+      libdrm2 \
+      libgbm1 \
+      libnspr4 \
+      libnss3 \
+      libx11-xcb1 \
+      libxcomposite1 \
+      libxdamage1 \
+      libxrandr2 \
+      xdg-utils \
+      libu2f-udev \
+      libvulkan1 \
+      libwayland-client0 \
+      libwayland-cursor0 \
+      libwayland-egl1 \
+      libxshmfence1 \
+      libxss1 \
+      libxext6 \
+      libxtst6 \
+      libxfixes3 \
+      libglib2.0-0 \
+      libx11-6 \
+      libxrender1 \
+      libxkbcommon0 \
+      libpango-1.0-0 \
+      libpangocairo-1.0-0 \
+      libatspi2.0-0 \
+      libasound2t64
