--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,37 +1,66 @@
-- name: Install dependencies for Puppeteer
-  run: |
-    sudo apt-get update
-    sudo apt-get install -y \
-      ca-certificates \
-      fonts-liberation \
-      libatk-bridge2.0-0 \
-      libatk1.0-0 \
-      libcups2 \
-      libdbus-1-3 \
-      libdrm2 \
-      libgbm1 \
-      libnspr4 \
-      libnss3 \
-      libx11-xcb1 \
-      libxcomposite1 \
-      libxdamage1 \
-      libxrandr2 \
-      xdg-utils \
-      libu2f-udev \
-      libvulkan1 \
-      libwayland-client0 \
-      libwayland-cursor0 \
-      libwayland-egl1 \
-      libxshmfence1 \
-      libxss1 \
-      libxext6 \
-      libxtst6 \
-      libxfixes3 \
-      libglib2.0-0 \
-      libx11-6 \
-      libxrender1 \
-      libxkbcommon0 \
-      libpango-1.0-0 \
-      libpangocairo-1.0-0 \
-      libatspi2.0-0 \
-      libasound2t64
+name: Run Remote Job Crawler
+
+on:
+  schedule:
+    - cron: "0 * * * *" # 每小时运行一次（UTC 时间）
+  workflow_dispatch: # 可手动触发
+
+jobs:
+  crawl:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+
+      - name: Install system dependencies for Puppeteer
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            ca-certificates \
+            fonts-liberation \
+            libatk-bridge2.0-0 \
+            libatk1.0-0 \
+            libcups2 \
+            libdbus-1-3 \
+            libdrm2 \
+            libgbm1 \
+            libnspr4 \
+            libnss3 \
+            libx11-xcb1 \
+            libxcomposite1 \
+            libxdamage1 \
+            libxrandr2 \
+            xdg-utils \
+            libu2f-udev \
+            libvulkan1 \
+            libwayland-client0 \
+            libwayland-cursor0 \
+            libwayland-egl1 \
+            libxshmfence1 \
+            libxss1 \
+            libxext6 \
+            libxtst6 \
+            libxfixes3 \
+            libglib2.0-0 \
+            libx11-6 \
+            libxrender1 \
+            libxkbcommon0 \
+            libpango-1.0-0 \
+            libpangocairo-1.0-0 \
+            libatspi2.0-0 \
+            libasound2t64
+
+      - name: Install Node.js dependencies
+        run: npm ci
+
+      - name: Run bot (爬虫并推送到 Telegram)
+        run: node index.js
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
