--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,7 +2,7 @@ name: Run Remote Job Crawler
 
 on:
   schedule:
-    - cron: "0 * * * *" # 每小时运行一次（UTC 时间）
+    - cron: "0 */4 * * *" # 每小时运行一次（UTC 时间）
   workflow_dispatch: # 可手动触发
 
 jobs:
@@ -17,6 +17,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18"
+
+      - name: Cache Node.js modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install system dependencies for Puppeteer
         run: |
