--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,8 +2,8 @@ name: Run Remote Job Crawler
 
 on:
   # 每 4 小时运行一次（UTC 时间）
-  # schedule:
-  #   - cron: "0 */4 * * *"
+  schedule:
+    - cron: "0 */4 * * *"
   workflow_dispatch: # 可手动触发
 
 jobs:
