--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "https-proxy-agent": "^7.0.6",
     "node-cron": "^3.0.2",
     "node-telegram-bot-api": "^0.61.0",
+    "playwright-core": "^1.55.0",
     "puppeteer": "^21.3.8",
     "puppeteer-core": "^24.17.0"
   }
