--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "@supabase/supabase-js": "^2.38.0",
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
-    "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.3.1",
     "https-proxy-agent": "^7.0.6",
     "node-cron": "^3.0.2",
     "node-telegram-bot-api": "^0.61.0",
     "playwright-core": "^1.55.0",
     "puppeteer": "^21.3.8",
-    "puppeteer-core": "^24.17.0"
+    "puppeteer-core": "10.1.0",
+    "chrome-aws-lambda": "10.1.0"
   }
 }
